--- a/Sesi 1/indeks.html
+++ b/Sesi 1/indeks.html
@@ -20,7 +20,7 @@
       <li><a href="https://www.google.com/">Google</a></li>
     </ul>
 
-    <img src="/img/uniska.jpg" alt="Logo Uniska" />
+    <img src="img/uniska.jpg" alt="Logo Uniska" />
 
     <p>Pada sesi 1 mahasiswa mengenali dulu struktur dasar HTML beserta sintaks dasarnya</p>
 
@@ -31,7 +31,7 @@
     </ol>
 
     <h2 id="html">HTML</h2>
-    <img src="/img/html.jpg" alt="HTML logo" width="200px" height="auto" />
+    <img src="img/html.jpg" alt="HTML logo" width="200px" height="auto" />
 
     <p>Pada sesi 1 mahasiswa mengenali dulu struktur dasar HTML beserta sintaks dasarnya</p>
 
@@ -42,14 +42,14 @@
     </ol>
 
     <h2 id="css">CSS</h2>
-    <img src="/img/css.jpg" alt="CSS logo" width="200px" height="auto" />
+    <img src="img/css.jpg" alt="CSS logo" width="200px" height="auto" />
     <p>
       Cascading Style Sheet (CSS) merupakan standar untuk mengatur tampilan yang ada pada sutatu berkas HTML, CSS bukan bahasa pemrograman tetapi merupakan bahasa deklaratif yang dinyatakan langsung untuk menyatakan suatu tampilan, tidak
       terdapat logika, percabangan, ataupun perulangan
     </p>
 
     <h2 id="js">Javascript</h2>
-    <img src="/img/js.jpg" alt="Javascript logo" width="200px" height="auto" />
+    <img src="img/js.jpg" alt="Javascript logo" width="200px" height="auto" />
     <p>Javascript merupakan bahasa pemrograman yang berjalan disisi browser, disisi pengguna, atau di peramban bukan diserver</p>
   </body>
 </html>
